fixed sidebar/logo spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -241,11 +241,6 @@ header {
   margin-left: 1rem;
 }
 
-/* .sidebar-toggle {
-  display: contents;
-  margin-left: 1rem;
-} */
-
 .sidebar-toggle {
   display: none;
 }
@@ -255,13 +250,12 @@ nav ul li {
 }
 
 .sidebar {
-  height: 100%;
+  height: 90vh;
   width: 16rem;
   position: fixed;
   top: 4rem;
   left: 0;
   z-index: 1;
-  /* padding-top: 4rem; */
   overflow-x: hidden;
   transition: transform 0.2s ease;
   border-top: 1px solid var(--divider-color);
@@ -271,7 +265,7 @@ nav ul li {
 
 .sidebar-link {
   display: block;
-  padding-left: 2rem;
+  padding-left: 1.5rem;
   margin-bottom: 1rem;
   margin-top: 1rem;
   font-size: var(--h5);
@@ -293,7 +287,6 @@ nav ul li {
 .sidebar-subheader-link {
   padding-top: 0.2rem;
   padding-bottom: 0.2rem;
-  padding-left: 1rem;
   font-size: var(--base-font-size);
 }
 
@@ -541,10 +534,6 @@ input:checked ~ .accordion-content {
 }
 
 /* Must be afterward to override sidebar hiding under 768px */
-/* .sidebar-open {
-  transform: translateX(0%);
-} */
-
 input[type="checkbox"]:checked ~ .sidebar {
   transform: translateX(0%);
 }
@@ -556,7 +545,7 @@ input[type="checkbox"]:checked ~ .sidebar {
   }
 
   .logo {
-    display: block;
+    display: flex;
   }
 
   #hamburger {
